- CHG: Update filtering to allow for more advanced boolean combinations. - CHG: Updated Gradle. - ADD: Added permission level access.